--- a/src/scss/_Curator-Feeds.scss
+++ b/src/scss/_Curator-Feeds.scss
@@ -3,7 +3,7 @@
   //margin-top: 25px;
 
   .crt-feed {
-    .crt-post {
+    .crt-list-post {
       box-shadow: 0px 4px 20px #00000026, 0px 4px 4px rgba(0, 0, 0, 0.05);
       border-radius: 6px;
       overflow: hidden;
@@ -14,18 +14,43 @@
         font-size: 16px;
         line-height: 1.4;
 
-        .crt-post-header {
-          margin-top: -20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
-          .crt-post-fullname {
-            margin-top: -15px;
-            font-size: 20px;
-          }
+        .crt-list-post-image {
+          // display: none;
+          width: 100% !important;
         }
 
-        .crt-post-text {
-          margin-bottom: -15px;
+        .crt-list-post-text {
+          //margin-bottom: -15px;
           color: #2d2d2c;
+
+          .crt-post-header {
+            margin-top: -20px;
+            margin-bottom: -20px;
+
+            .crt-post-fullname {
+              font-size: 24px;
+            }
+          }
+
+          .crt-list-post-text-wrap {
+            color: #2d2d2c;
+            margin-bottom: -10px;
+          }
+
+          .crt-post-footer {
+            .crt-post-username {
+              display: none;
+            }
+            .crt-post-date {
+              font-size: 16px;
+              margin-left: -20px;
+            }
+          }
         }
 
         a {
@@ -38,19 +63,6 @@
           }
         }
       }
-      .crt-post-footer {
-        .crt-post-username {
-          display: none;
-        }
-        .crt-post-date {
-          font-size: 16px;
-          margin-left: -20px;
-        }
-      }
-    }
-
-    .crt-list-post-text-wrap {
-      color: #2d2d2c;
     }
   }
 }
