--- a/src/scss/_About-Content.scss
+++ b/src/scss/_About-Content.scss
@@ -17,3 +17,10 @@
     }
   }
 }
+
+@media only screen and (max-width: 650px) {
+  .About-Content {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
