--- a/src/scss/_Live-Events.scss
+++ b/src/scss/_Live-Events.scss
@@ -15,7 +15,7 @@
     border-radius: 6px;
     overflow: hidden;
     min-height: 500px;
-    max-width: 1000px; // Mapbox doesn't cooperate well with wider frames
+    max-width: 720px; // Mapbox doesn't cooperate well with frames > 1000px
     min-width: 500px;
     flex-shrink: 3;
     flex-grow: 3;
@@ -35,9 +35,9 @@
       padding: 0;
       margin: 0;
       width: 104%; // Very sensitive, may need to change
-      margin-left: -15px; // ^
+      margin-left: -15px; //// ^
       margin-bottom: -10px; // ^
-      margin-top: 6px; // ^
+      margin-top: 6px; /////// ^
     }
   }
 
@@ -48,7 +48,7 @@
     border-radius: 6px;
     overflow-y: scroll;
     min-height: 500px;
-    min-width: 300px; // Just a guess
+    min-width: 300px;
     max-width: 300px;
     margin-bottom: 20px;
     flex-shrink: 0;
