--- a/src/scss/_Curator-Feeds.scss
+++ b/src/scss/_Curator-Feeds.scss
@@ -21,6 +21,9 @@
 
         .crt-list-post-image {
           width: 100% !important;
+          .crt-post-content-image {
+            width: 100% !important;
+          }
         }
 
         .crt-list-post-text {
